# hive-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/hive_mcp_server/: __init__.py  server.py
src/hive_mcp_server/tools/: hive_tools.py
