[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hive-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server exposing a Cloudera Hive Virtual Warehouse to LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Cloudera" }
authors = [{ name = "mjain" }]
keywords = ["mcp", "hive", "cloudera", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.2.0",
    "pyhive==0.7.0",
    "thrift>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hive-mcp-server = "hive_mcp_server:main"

[project.urls]
Homepage = "https://github.com/mjain/hive-mcp-server"
Issues = "https://github.com/mjain/hive-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hive_mcp_server"]
